[gd_scene load_steps=17 format=3 uid="uid://b0wotdpec438n"]

[ext_resource type="Script" path="res://player.gd" id="1_rijp7"]
[ext_resource type="Script" path="res://idle.gd" id="2_beik1"]
[ext_resource type="Script" path="res://walk.gd" id="3_xlfcv"]
[ext_resource type="Script" path="res://run.gd" id="4_eqogx"]
[ext_resource type="Script" path="res://jump.gd" id="5_owpp3"]
[ext_resource type="Script" path="res://fall.gd" id="6_nlq3r"]
[ext_resource type="Script" path="res://label_3d.gd" id="7_10xti"]
[ext_resource type="Script" path="res://land.gd" id="7_kthuh"]
[ext_resource type="PackedScene" uid="uid://cs2u4jel7tl5r" path="res://Walking.fbx" id="8_7gndt"]
[ext_resource type="Script" path="res://crouch.gd" id="8_q8kfb"]
[ext_resource type="Script" path="res://kaya.gd" id="9_sx5du"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_iu4ny"]
friction = 0.2

[sub_resource type="CapsuleMesh" id="CapsuleMesh_mwgvg"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_kln3h"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[sub_resource type="BoxShape3D" id="BoxShape3D_h6l4n"]
size = Vector3(0.559082, 0.299992, 0.553162)

[sub_resource type="FontFile" id="FontFile_awua1"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/32/0/ascent = 0.0
cache/0/32/0/descent = 0.0
cache/0/32/0/underline_position = 0.0
cache/0/32/0/underline_thickness = 0.0
cache/0/32/0/scale = 1.0
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[node name="Player" type="RigidBody3D"]
top_level = true
mass = 1.4
physics_material_override = SubResource("PhysicsMaterial_iu4ny")
lock_rotation = true
continuous_cd = true
contact_monitor = true
script = ExtResource("1_rijp7")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("CapsuleMesh_mwgvg")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("ConvexPolygonShape3D_kln3h")

[node name="TwistPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="PitchPivot" type="Node3D" parent="TwistPivot"]
transform = Transform3D(1, 0, 0, 0, 0.984808, 0.173648, 0, -0.173648, 0.984808, 0, 0, 0)

[node name="Camera3D" type="Camera3D" parent="TwistPivot/PitchPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3)
fov = 89.4

[node name="state" type="Node3D" parent="."]

[node name="idle" type="Node3D" parent="state"]
script = ExtResource("2_beik1")

[node name="walk" type="Node3D" parent="state"]
script = ExtResource("3_xlfcv")

[node name="run" type="Node3D" parent="state"]
script = ExtResource("4_eqogx")

[node name="jump" type="Node3D" parent="state"]
script = ExtResource("5_owpp3")

[node name="fall" type="Node3D" parent="state"]
script = ExtResource("6_nlq3r")

[node name="land" type="Node3D" parent="state"]
script = ExtResource("7_kthuh")

[node name="crouch" type="Node3D" parent="state"]
script = ExtResource("8_q8kfb")

[node name="Feet" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Feet"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.002, -0.834135, -0.002)
shape = SubResource("BoxShape3D_h6l4n")

[node name="DebugText" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.1657, 0)
billboard = 1
text = "sup"
font = SubResource("FontFile_awua1")
script = ExtResource("7_10xti")

[node name="Walking" parent="." instance=ExtResource("8_7gndt")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.955797, 0)
script = ExtResource("9_sx5du")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="Feet" to="." method="_on_feet_body_entered"]
[connection signal="body_exited" from="Feet" to="." method="_on_feet_body_exited"]
